@@ -25,6 +25,7 @@ import java.util.concurrent.LinkedBlockingQueue;
 
 import easytasks.MultithreadedTask;
 import easytasks.Task;
+import easytasks.TaskAdapter;
 
 import static com.tycho.app.primenumberfinder.utils.FileManager.EXTENSION;
 
@@ -102,73 +103,75 @@ public class FindPrimesTask extends MultithreadedTask implements Savable {
     }
 
     private void searchBruteForce() {
-        //Create worker tasks
-        for (int i = 0; i < threadCount; i++) {
-            long s = startValue + (2 * i + 1);
-            if (s % 2 == 0) {
-                s -= 1;
-            }
-
-            //If 's' is divisible by 'threadCount', increment it by 2 to avoid a thread with all non-primes
-            /*Log.e(TAG, "s: " + s + " " + (s % threadCount));
-            if (threadCount != 1 && s % threadCount == 0){
-                s += 2;
-            }*/
-
-            final BruteForceTask task = new BruteForceTask(s, endValue, threadCount * 2);
-            task.bufferSize = searchOptions.bufferSize / threadCount;
-            addTask(task);
-        }
-
-        /*
-        1 7  13
-        3 9  15
-        5 11 17
-
-        if first number is multiple of threadcount, redo it
-
-        29  35  41
-        31  37  43
-        33  39  45
-
-        29  37
-        31  39
-        35  41
-         */
+        Log.w(TAG, "Start task: " + endValue);
 
         final long[] startValues = new long[threadCount];
-        for (int i = 0; i < threadCount; i++){
-            long s = startValue + (2 * i + 1);
-            if (s % 2 == 0) {
-                s -= 1;
+        int increment = threadCount * 2;
+
+        startValues[0] = (startValue % 2 == 0) ? (startValue + 1) : startValue;
+        for (int i = 0; i < startValues.length; i++) {
+            long s = i == 0 ? startValues[0] : startValues[i - 1] + 2;
+            while (true){
+                if (s % 2 == 0) {
+                    s -= 1;
+                }
+
+                /*if (threadCount != 1 && s % threadCount == 0 && increment % threadCount == 0){
+                    s += 2;
+                    increment += 2;
+                    continue;
+                }*/
+
+                break;
             }
             startValues[i] = s;
         }
 
         /*final long partition = (endValue - startValue) / threadCount;
-        for (int i = 0; i < threadCount; i++){
-            long start = partition * i;
-            if (start % 2 == 0){
-                start++;
+        for (int i = 0; i < startValues.length; i++) {
+            startValues[i] = startValue + (i * partition);
+            if (startValues[i] % 2 == 0){
+                startValues[i]++;
             }
-            addTask(new BruteForceTask(start, partition * (i + 1), 2));
-        }*/
+        }
+        increment = 2;*/
 
-        executeTasks();
+        for (int i = 0; i < startValues.length; i++) {
+            String pattern = "";
+            for (int x = 0; x < 5; x++){
+                pattern += (startValues[i] + (increment * x)) + " ";
+            }
+            Log.d(TAG, "Pattern: " + pattern);
+        }
+
+        //Create worker tasks
+        for (long start : startValues){
+            final BruteForceTask task = new BruteForceTask(start, endValue, increment);
+            task.addTaskListener(new TaskAdapter(){
+                @Override
+                public void onTaskStopped() {
+                    Log.e(TAG, "Task " + task.startValue + " stopped.");
+                }
+            });
+            task.bufferSize = searchOptions.bufferSize / threadCount;
+            addTask(task);
+        }
 
         /*
-        NEW VERSION
-        10,000,000 - 4 threads: 65 sec
-        10,000,000 - 3 threads: 84 sec
-        1,000,000 - 4 threads: 2.7 sec
-        1,000,000 - 3 threads: 3.1 sec
+        Partitions:
+        1,000,000 : 7.3 sec | 4.4 sec |  3.1 sec |  2.6 sec
+        10,000,000:                     89   sec | 73   sec
 
-        OLD VERSION
-        10,000,000 - 4 threads: 55 sec
-        10,000,000 - 3 threads: 98 sec
-        1,000,000 - 4 threads: 2.6 sec
-        1,000,000 - 3 threads: 3.7 sec
+        Increments:
+        1,000,000 : 7.6 sec | 3.9 sec |  3.6 sec |  2.4 sec
+        10,000,000:                   | 95  sec  | 56   sec
+
+        1 9  17 25
+        3 13 21 29
+        5 15 23 31
          */
+
+        executeTasks();
 
         //Execute all tasks
 /*        final List<Thread> threads = new ArrayList<>();
@@ -738,7 +741,7 @@ public class FindPrimesTask extends MultithreadedTask implements Savable {
         /**
          * The maximum size of prime numbers in memory. If more numbers are found, the entire list will be saved onto the disk first.
          */
-        private int bufferSize = 100_000;
+        private int bufferSize = 1_000_000;
 
         public SearchOptions(final long startValue, final long endValue, final SearchMethod searchMethod, final int threadCount, final boolean notifyWhenFinished, final boolean autoSave) {
             super(threadCount, notifyWhenFinished, autoSave);
